# travel-jam

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yaml
src/: debug.rs  main.rs
src/core/: animations.rs  camera.rs  mod.rs  pause_manager.rs
src/core/audio/: mod.rs
src/core/environment/: background.rs  chunk_rendering.rs  hill_coords.rs  mod.rs
src/core/items/: mod.rs
src/core/music/: mod.rs
src/core/player/: collisions.rs  controls.rs  mod.rs  movement.rs
src/core/ui/: gui.rs  main_menu.rs  mod.rs  pause_menu.rs  settings_menu.rs  shop_menu.rs  stats_display.rs
src/utils/: mod.rs
wasm/: index.html
