[package]
name = "travel-jam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.0"
bevy-inspector-egui = "0.23.4"
bevy_egui = "0.25.0"
bevy_kira_audio = { version = "0.19.0", features = ["mp3"] }
egui_extras = { version = "0.26.2", features = ["image"] }
image = { version = "0.25.0", features = ["png"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# [patch.crates-io]
# bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "release-0.13.1" }
