[package]
name = "travel-jam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.1", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "default_font",
    "webgl2",
    "bevy_debug_stepping",
] }
bevy-inspector-egui = "0.23.4"
bevy-parallax = "0.8.0"
bevy_egui = "0.25.0"
bevy_kira_audio = { version = "0.19.0", features = ["ogg", "wav"] }
bevy_rapier2d = "0.25.0"
egui_extras = { version = "0.26.2", features = ["image"] }
image = { version = "0.25.0", features = ["png"] }
rand = "0.8.5"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 3

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# [patch.crates-io]
# bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "release-0.13.1" }

[dependencies.bevy_collider_gen]
version = "0.2.0"
features = ["rapier2d"]
default-features = false
